# TinyRenderer

./: CMakeLists.txt  TinyRenderer.cpp
src/: TinyRenderer.cpp  TinyRenderer.h  geometry.h  model.cpp  model.h  tgaimage.h
test/: hello_test.cpp
